--- a/web/index.html
+++ b/web/index.html
@@ -112,11 +112,11 @@
 <script src="/__/firebase/init.js"></script>
 <script>
    var firebaseConfig = {
-  apiKey: "AIzaSyDhbgmANMpnN2lS4UkaFawvmidt-At12s0",
+  apiKey: "",
   authDomain: "localhost",
   projectId: "weather-app-4443a",
   appId: "1:31568379267:web:7be3e39a2029dd3e234ab6",
-  messagingSenderId: "31568379267"
+  messagingSenderId: ""
 };
 
 firebase.initializeApp(firebaseConfig);
